# flet-onesignal

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: dev.yml  docs.yml  main.yml
docs/: index.md  migration.md  troubleshooting.md
docs/assets/stylesheets/: extra.css
docs/guide/: debugging.md  in-app-messages.md  live-activities.md  location.md  notifications.md  outcomes.md  privacy-consent.md  user-management.md
docs/reference/: console.md  debug.md  in-app-messages.md  languages.md  live-activities.md  location.md  notifications.md  onesignal.md  session.md  types.md  user.md
examples/flet_onesignal_example/: pyproject.toml
examples/flet_onesignal_example/src/: config.py  context.py  main.py  state.py
examples/flet_onesignal_example/src/components/: __init__.py  action_button.py  drawer.py  input_field.py  log_viewer.py  page_layout.py
examples/flet_onesignal_example/src/pages/: __init__.py  consent.py  debug.py  event_logs.py  in_app_messages.py  live_activities.py  location.py  login.py  notifications.py  session.py  user_aliases.py  user_email_sms.py  user_identity.py  user_language.py  user_push.py  user_tags.py
examples/flet_onesignal_test/: pyproject.toml
examples/flet_onesignal_test/src/: config.py  context.py  main.py  rest_api.py  runner.py  state.py  test_steps.py
examples/flet_onesignal_test/src/components/: checklist.py  log_panel.py
scripts/: flet_log.py  flet_log.sh
src/flet_onesignal/: __init__.py  __main__.py  build.py  console.py  debug.py  in_app_messages.py  languages.py  live_activities.py  location.py  notifications.py  onesignal.py  session.py  types.py  ui.py  user.py
src/flutter/: __init__.py
src/flutter/flet_onesignal/: __init__.py  pubspec.yaml
src/flutter/flet_onesignal/android/: build.gradle  consumer-rules.pro
src/flutter/flet_onesignal/android/src/main/: AndroidManifest.xml
src/flutter/flet_onesignal/android/src/main/java/com/flet/onesignal/: FletOneSignalPlugin.java
src/flutter/flet_onesignal/lib/: flet_onesignal.dart
src/flutter/flet_onesignal/lib/src/: extension.dart  onesignal_service.dart
tests/: test_build.py  test_console.py  test_languages.py  test_types.py
