[project]
name = "flet-onesignal"
version = "0.4.0"
description = "Flutter OneSignal package integration for Python Flet."
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "brunobrown", email = "brunobrown.86@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "flet>=0.80.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
build = [
    "watchdog>=3.0.0",
]

[project.scripts]
fos-build = "flet_onesignal.build:main"

[dependency-groups]
dev = [
    "flet[all]>=0.80.0",
]

[tool.ruff]
output-format = "concise"
extend-exclude = ["__pycache__"]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
]
ignore = [
    "F403", # Não é possível detectar nomes indefinidos
#    "F405",
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ty.rules]
# tomllib é stdlib desde Python 3.11; ty não resolve corretamente
unresolved-import = "ignore"

# Erros causados por **kwargs com dicionários dinâmicos
# O ty ainda não consegue inferir corretamente esses padrões
invalid-argument-type = "ignore"

# Erros de operadores com tipos desconhecidos do flet
unsupported-operator = "ignore"

# Erros de contexto do Flet (use_context pode retornar None)
unresolved-attribute = "ignore"

# Erros de parâmetros em controles do Flet
missing-argument = "ignore"

# Erros de atribuição com @ft.observable e use_state
invalid-assignment = "ignore"

# Warnings de atributos possivelmente faltando
possibly-missing-attribute = "ignore"

# Forward references em TYPE_CHECKING (ex: ft.Event["OneSignal"])
unresolved-reference = "ignore"

[tool.ty.terminal]
output-format = "concise"  # Links clicáveis no terminal
#error-on-warning = false   # Opcional: não retornar erro em warnings

#[tool.setuptools]
##packages = ["flet_onesignal"]
##package-dir = {"" = "src"}

[tool.setuptools.package-data]
"flutter.flet_onesignal" = ["**/*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

classifiers = [
    "Topic :: Software Development :: Debuggers",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/brunobrown/flet-onesignal"
#Documentation = ""
Repository = "https://github.com/brunobrown/flet-onesignal"
Issues = "https://github.com/brunobrown/flet-onesignal/issues"
#Changelog = ""
